# cpp_victory

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  conanfile.txt  docker-compose.yml  prometheus.yml
.github/workflows/: docker-compose.yml
documentation/: DOCS.md  project.md
source/: main.cpp
source/core/: base_server.cpp  base_server.h  signals_handler.h  utils.cpp  utils.h
source/core/tiny_cache/: cache.cpp  cache.h  static_files_list.h
source/iface/: iserver.h
source/logic/: crow_server.cpp  crow_server.h  like_manager.cpp  like_manager.h
source/logic/prometheus/: prometheus.cpp  prometheus.h
static/: index.html  manifest.json  ru_index.html  script.js  styles.css
